# multi_agent_coder

./: PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
src/multiagent_dev/: __init__.py  app.py  approvals.py  config.py  orchestrator.py
src/multiagent_dev/agents/: __init__.py  base.py  coder.py  planner.py  reviewer.py  tester.py  user_proxy.py
src/multiagent_dev/cli/: main.py
src/multiagent_dev/evaluation/: __init__.py  harness.py
src/multiagent_dev/execution/: __init__.py  base.py  docker_exec.py  local_exec.py
src/multiagent_dev/llm/: __init__.py  base.py  copilot_client.py  generic_client.py  openai_client.py  registry.py
src/multiagent_dev/memory/: __init__.py  memory.py  retrieval.py
src/multiagent_dev/tools/: __init__.py  base.py  builtins.py  registry.py  vcs.py
src/multiagent_dev/util/: __init__.py  logging.py  observability.py
src/multiagent_dev/version_control/: __init__.py  base.py  git_service.py
src/multiagent_dev/workspace/: manager.py
tests/: test_agents.py  test_cli.py  test_config.py  test_evaluation_harness.py  test_execution_engine.py  test_llm_copilot_client.py  test_llm_openai_client.py  test_memory.py  test_observability.py  test_orchestrator.py  test_package_metadata.py  test_retrieval.py  test_tools.py  test_version_control.py  test_workspace_manager.py
